<resources>
    <string name="app_name">Thamdavy</string>
    <string name="learn_more_about_crytocurrenies_n_to_the_future">Learn More about crytocurrenies\n to the future</string>
    <string name="the_future">The Future</string>
    <string name="login">Login</string>
    <string name="username">UserName</string>
    <string name="thamdavy">Thamdavy</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget Your Password</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="register_now">Register Now</string>
    <string name="_369_963">369.963</string>
    <string name="_33">.33</string>
    <string name="add">Add</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="buy">Buy</string>
    <string name="crypto_activies">Crypto Activies</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="_000">_000</string>
    <string name="_10">_10</string>
    <string name="_12_456">_12_456</string>
    <string name="_30">-30%</string>
    <string name="_0_1984btc">$0.1984BTC</string>
    <string name="_12m">$12M</string>
    <string name="btc">BTC</string>
    <string name="_591_0">$591.0</string>
    <string name="bnb">BNB</string>
    <string name="_3_512_79">3,512.79</string>
    <string name="eth">ETH</string>
    <string name="_0_00001">$0.00001</string>
    <string name="trx">TRX</string>
    <string name="_10_44b">10.44B</string>
    <string name="_10_46b">$10.46B</string>
    <string name="_429_25m">$429.25M</string>
    <string name="_0_46">+0.46%</string>
    <string name="_0_02">-0.02%</string>
    <string name="_0_00">0.00</string>
    <string name="bchusdt">BCHUSDT</string>
    <string name="_7_67b">7.67B</string>
    <string name="_1_27t">1.27T</string>
    <string name="_7_67">$7.67</string>
    <string name="_0_01">+0.01%</string>
    <string name="_123_2m">123.2M</string>
    <string name="_11_47b">$11.47B</string>
    <string name="_0_0234trx">0.0234TRX</string>
    <string name="_123">$123</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="tommy_shaelby">Tommy shaelby</string>
    <string name="general">General</string>
    <string name="notification_preference">Notification Preference</string>
    <string name="language">Language</string>
    <string name="withdrawal_address">Withdrawal Address</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="about_us">About Us</string>
    <string name="check_for_updates">Check For Updates</string>
    <string name="your_current_version_is_up_to_date_n_v2_84_3">Your current version is up to date.\n v2.84.3</string>
    <string name="app_id_1111">App ID: 1111</string>
    <string name="my_profile"><![CDATA[My Profile >]]></string>
    <string name="security">Security</string>
    <string name="seculity"><![CDATA[Seculity >]]></string>
    <string name="language_translate"><![CDATA[Language translate >]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="ee"><![CDATA[Contact Us >]]></string>
    <string name="bank"><![CDATA[Bank >]]></string>
    <string name="mute">Mute</string>
</resources>